--- a/pages/subpages/mine/promoter-center/subpages/account/index.wxss
+++ b/pages/subpages/mine/promoter-center/subpages/account/index.wxss
@@ -111,7 +111,7 @@
 .withdraw-rules-btn {
   display: flex;
   align-items: center;
-  color: #F5701D;
+  color: var(--theme-color);
   font-size: 24rpx;
 }
 .arrow {
@@ -168,9 +168,9 @@
   border: 1px solid transparent;
 }
 .date.selected {
-  color: #F5701D;
+  color: var(--theme-color);
   background: #FFF3EC;
-  border: 1px solid #F5701D;
+  border: 1px solid var(--theme-color);
 }
 
 .daily-data-list {
@@ -280,7 +280,7 @@
   font-size: 22rpx;
 }
 .goods-commission {
-  color: #F5701D;
+  color: var(--theme-color);
   font-size: 24rpx;
 }
 
