--- a/pages/subpages/mall/goods/subpages/goods-detail/index.wxss
+++ b/pages/subpages/mall/goods/subpages/goods-detail/index.wxss
@@ -276,39 +276,59 @@ page {
 
 .evaluation-summary-wrap {
   margin: 20rpx;
-  padding: 12rpx 32rpx;
-  height: 110rpx;
   background: #fff;
   border-radius: 32rpx;
 }
-.evaluation-user-avatar-wrap {
-  margin-left: 8rpx;
-  margin-right: 12rpx;
+.evaluation-total {
+  padding: 32rpx;
 }
-.evaluation-user-avatar {
-  margin-left: -8rpx;
-  width: 40rpx;
-  height: 40rpx;
-  border-radius: 50%;
-  border: 2rpx solid #fff;
+.evaluation-title {
+  color: #333;
+  font-size: 30rpx;
+  font-weight: bold;
 }
 .evaluation-num {
-  color: #333;
-  font-size: 26rpx;
-  font-weight: 600;
-}
-.goods-score-wrap {
   color: #666;
-  font-size: 26rpx;
+  font-size: 24rpx;
 }
-.goods-score {
-  margin-left: 8rpx;
-  color: #333;
-  font-weight: 600;
-}
-.goods-score-arrow {
+.evaluatio-arrow {
   width: 18rpx;
   height: 18rpx;
+}
+.evaluation-list {
+  padding: 32rpx;
+  border-top: 1px solid #eee;
+}
+.evaluation-item {
+  margin-bottom: 32rpx;
+}
+.evaluation-item:last-child {
+  margin-bottom: 0;
+}
+.evaluation-user-avatar {
+  width: 45rpx;
+  height: 45rpx;
+  border-radius: 50%;
+}
+.evaluation-user-name {
+  margin-left: 12rpx;
+  margin-right: 8rpx;
+  color: #999;
+  font-size: 26rpx;
+}
+.evaluation-content-wrap {
+  margin-top: 12rpx;
+}
+.evaluation-content {
+  flex: 1;
+  color: #333;
+  font-size: 26rpx;
+}
+.evaluation-image {
+  margin-left: 32rpx;
+  width: 120rpx;
+  height: 120rpx;
+  border-radius: 32rpx;
 }
 
 .goods-detail {
