--- a/pages/subpages/mall/scenic-spot/components/scenic-spot-item/index.wxml
+++ b/pages/subpages/mall/scenic-spot/components/scenic-spot-item/index.wxml
@@ -14,7 +14,7 @@
       <view class="label" wx:for="{{item.featureTagList}}" wx:key="index" wx:for-item="label">{{label}}</view>
     </view>
     <view class="score-wrap">
-      <van-rate value="{{item.score || 0}}" size="12" gutter="0" color="#ffd21e" void-icon="star" void-color="#eee" allow-half readonly />
+      <van-rate value="{{item.score || 0}}" size="12" gutter="0" color="#fa2458" void-icon="star" void-color="#fedbe4" allow-half readonly />
       <text class="score">{{item.score || '暂无评'}}分</text>
     </view>
     <view class="position-wrap">
