--- a/pages/subpages/mine/order-center/subpages/goods-order/evaluation/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/goods-order/evaluation/index.wxml
@@ -12,7 +12,7 @@
   <view class="evaluation-info-wrap">
     <view class="goods-score row">
       <view class="score-title">商品评分</view>
-      <van-rate value="{{score}}" bind:change="setScore" gutter="0" color="#ffd21e" void-icon="star" void-color="#eee" />
+      <van-rate value="{{score}}" bind:change="setScore" gutter="0" color="#fa2458" void-icon="star" void-color="#fedbe4" />
       <view class="score">{{score}}分</view>
     </view>
     <textarea class="evaluation-content" bindinput="setContent" placeholder="请输入您对商品的评价" />
