--- a/utils/filters/time.wxs
+++ b/utils/filters/time.wxs
@@ -55,11 +55,26 @@ function countDown(timeStamp, statement) {
   var hours = format(Math.floor((timeStamp % (24 * 60 * 60)) / (60 * 60)));
   var minutes = format(Math.floor((timeStamp % (60 * 60)) / 60));
   var seconds = format(Math.floor(timeStamp % 60));
-  return statement
-    .replace("d", days)
-    .replace("hh", hours)
-    .replace("mm", minutes)
-    .replace("ss", seconds);
+  if (statement.indexOf("d") !== -1) {
+    if (days) {
+      return statement
+        .replace("d", days)
+        .replace("hh", hours)
+        .replace("mm", minutes)
+        .replace("ss", seconds);
+    } else {
+      return statement
+        .slice(2)
+        .replace("hh", hours)
+        .replace("mm", minutes)
+        .replace("ss", seconds);
+    }
+  } else {
+    return statement
+      .replace("hh", hours)
+      .replace("mm", minutes)
+      .replace("ss", seconds);
+  }
 }
 
 function timeDiff(timeStamp) {
