--- a/pages/subpages/mine/merchant-center/subpages/hotel-management/components/order-list/index.wxss
+++ b/pages/subpages/mine/merchant-center/subpages/hotel-management/components/order-list/index.wxss
@@ -13,7 +13,7 @@
   font-weight: 500;
 }
 .order-status {
-  color: #169dfe;
+  color: var(--theme-color);
 }
 
 .list-content {
@@ -64,13 +64,13 @@
   line-height: 54rpx;
   text-align: center;
   font-size: 26rpx;
-  color: #169dfe;
+  color: var(--theme-color);
   border-radius: 28rpx;
-  border: 1rpx solid #169dfe;
+  border: 1rpx solid var(--theme-color);
 }
 .btn.active {
   color: #fff;
-  background: #169dfe;
+  background: var(--theme-color);
 }
 .btn:last-child {
   margin-right: 0;
