--- a/pages/subpages/mine/merchant-center/subpages/shop-management/index.wxss
+++ b/pages/subpages/mine/merchant-center/subpages/shop-management/index.wxss
@@ -102,7 +102,7 @@
   height: 320rpx;
   content: '';
   border-radius: 50%;
-  background: #169dfe;
+  background: var(--theme-color);
 }
 .bg::before {
   left: -80rpx;
@@ -198,7 +198,7 @@
 }
 .menu-item.selected {
   position: relative;
-  color: #169dfe;
+  color: var(--theme-color);
   font-size: 15px;
   font-weight: bold;
 }
@@ -211,7 +211,7 @@
   height: 3px;
   content: '';
   border-radius: 1.5px;
-  background: #169dfe;
+  background: var(--theme-color);
 }
 
 
