--- a/pages/subpages/mine/order-center/components/goods-order-item/index.wxml
+++ b/pages/subpages/mine/order-center/components/goods-order-item/index.wxml
@@ -2,9 +2,9 @@
 <wxs module="ORDER" src="../../../utils/order.wxs" />
 
 <view class="order-list">
-  <view class="order-item" wx:for="{{list}}" wx:key="index" catchtap="navToDetail" data-id="{{item.id}}">
+  <view class="order-item" catchtap="navToDetail">
     <view class="list-header row between">
-      <view class="shop-info row" wx:if="{{item.shopId}}" catchtap="navToShop" data-id="{{item.shopId}}">
+      <view class="shop-info row" wx:if="{{item.shopId}}" catchtap="navToShop">
         <image class="shop-logo" wx:if="{{item.shopLogo}}" src="{{item.shopLogo}}" />
         <view class="shop-name omit single">{{item.shopName}}</view>
         <image style="width: 20rpx; height: 20rpx;" src="https://img.ubo.vip/mp/to-icon.png" />
