--- a/pages/subpages/mine/order-center/subpages/order-search/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/order-search/index.wxml
@@ -57,3 +57,9 @@
   <empty-illus wx:if="{{!orderList.length}}" desc="暂无{{['景点', '酒店', '餐券', '套餐', '商品'][type - 1]}}订单" />
   <view class="no-more-tips" wx:if="{{orderList.length}}">～没有更多了～</view>
 </view>
+
+<goods-qr-code-modal 
+  wx:if="{{goodsQrCodeModalVisible}}"
+  code="{{goodsVerifyCode}}" 
+  bind:hide="hideGoodsQrCodeModal"
+/>
