--- a/pages/subpages/mine/merchant-center/subpages/scenic-management/index.wxss
+++ b/pages/subpages/mine/merchant-center/subpages/scenic-management/index.wxss
@@ -82,10 +82,11 @@
 .data-card {
   position: relative;
   margin-top: 32rpx;
-  height: 320rpx;
+  height: 336rpx;
   color: #fff;
-  border-radius: 24rpx;
-  background: linear-gradient(135deg, #FE918D 0%, #FF4B7F 100%);
+  border-radius: 48rpx;
+  /* background: linear-gradient(135deg, #FE918D 0%, #FF4B7F 100%); */
+  background: linear-gradient(135deg, #67BAF6 0%, #2769F7 100%);
   overflow: hidden;
 }
 
@@ -106,7 +107,8 @@
   height: 100%;
 }
 .balance-data-title {
-  color: #FFCDD7;
+  /* color: #FFCDD7; */
+  color: #fff;
   font-size: 30rpx;
 }
 .balance-data-amount {
@@ -114,10 +116,11 @@
   font-weight: bold;
 }
 .data-items-wrap {
-  margin-top: 24rpx;
+  margin-top: 48rpx;
 }
 .data-title, .data-supplement {
-  color: #FFCDD7;
+  /* color: #FFCDD7; */
+  color: #fff;
   font-size: 22rpx;
 }
 .data-amount {
