--- a/custom-tab-bar/index.wxss
+++ b/custom-tab-bar/index.wxss
@@ -1,15 +1,17 @@
 .tab-bar {
   position: fixed;
-  left: 0;
-  bottom: 0;
+  left: 50%;
+  bottom: 48rpx;
+  transform: translateX(-50%);
   display: flex;
   align-items: center;
-  padding-bottom: env(safe-area-inset-bottom);
-  width: 100%;
-  height: 48px;
-  box-sizing: initial;
-  background: #fff;
-  box-shadow: 0 -2rpx 2rpx 0 rgba(0,0,0,0.05);
+  padding: 0 10rpx;
+  width: calc(100% - 96rpx);
+  height: 110rpx;
+  border-radius: 55rpx;
+  box-shadow: 0 0 2rpx 1rpx rgba(0, 0, 0, 0.05);
+  background: rgba(255, 255, 255, 0.68);
+  backdrop-filter: blur(8px);
   z-index: 100;
 }
 
@@ -22,11 +24,11 @@
   flex: 1;
 }
 .icon {
-  width: 24px;
-  height: 24px;
+  width: 48rpx;
+  height: 48rpx;
 }
 .text {
-  font-size: 10px;
+  font-size: 18rpx;
   color: #666;
 }
 .text.selected {
