--- a/pages/subpages/mine/merchant-center/subpages/catering-management/index.wxss
+++ b/pages/subpages/mine/merchant-center/subpages/catering-management/index.wxss
@@ -48,18 +48,20 @@
 
 .data-card {
   position: relative;
-  height: 320rpx;
+  margin-top: 32rpx;
+  height: 336rpx;
   color: #fff;
-  border-radius: 24rpx;
+  border-radius: 48rpx;
+  background: linear-gradient(135deg, #ECD075 0%, #F6BE00 100%);
   overflow: hidden;
 }
 
 .bg {
   position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 396rpx;
+  right: -30rpx;
+  bottom: -45rpx;
+  width: 240rpx;
+  height: 266rpx;
 }
 
 .main {
@@ -71,7 +73,7 @@
   height: 100%;
 }
 .balance-data-title {
-  color: #FFF3DE;
+  color: #fff;
   font-size: 30rpx;
 }
 .balance-data-amount {
@@ -79,10 +81,10 @@
   font-weight: bold;
 }
 .data-items-wrap {
-  margin-top: 24rpx;
+  margin-top: 48rpx;
 }
 .data-title, .data-supplement {
-  color: #FFF3DE;
+  color: #fff;
   font-size: 22rpx;
 }
 .data-amount {
@@ -94,12 +96,12 @@
   position: absolute;
   top: 32rpx;
   right: 32rpx;
-  color: #EC9B16;
+  color: #fff;
   font-size: 26rpx;
   width: 160rpx;
   height: 60rpx;
   border-radius: 30rpx;
-  background: #fff;
+  border: 1px solid #fff;
 }
 
 .btns-wrap {
