--- a/pages/subpages/mine/merchant-center/subpages/shop-management/index.wxss
+++ b/pages/subpages/mine/merchant-center/subpages/shop-management/index.wxss
@@ -82,35 +82,19 @@
 .data-card {
   position: relative;
   margin-top: 32rpx;
-  height: 320rpx;
+  height: 336rpx;
   color: #fff;
-  border-radius: 24rpx;
+  border-radius: 48rpx;
+  background: linear-gradient(135deg, #FE918D 0%, #FF4B7F 100%);
   overflow: hidden;
 }
 
 .bg {
   position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #2F6BB3;
-}
-.bg::before, .bg::after {
-  position: absolute;
-  width: 320rpx;
-  height: 320rpx;
-  content: '';
-  border-radius: 50%;
-  background: var(--theme-color);
-}
-.bg::before {
-  left: -80rpx;
-  bottom: -200rpx;
-}
-.bg::after {
-  top: -230rpx;
-  right: -120rpx;
+  right: -30rpx;
+  bottom: -45rpx;
+  width: 240rpx;
+  height: 266rpx;
 }
 
 .main {
@@ -122,6 +106,7 @@
   height: 100%;
 }
 .balance-data-title {
+  color: #FFCDD7;
   font-size: 30rpx;
 }
 .balance-data-amount {
@@ -129,9 +114,10 @@
   font-weight: bold;
 }
 .data-items-wrap {
-  margin-top: 24rpx;
+  margin-top: 48rpx;
 }
 .data-title, .data-supplement {
+  color: #FFCDD7;
   font-size: 22rpx;
 }
 .data-amount {
